# px-cli

./: .gitignore  .pre-commit-config.yaml  README.md  catalog-info.yaml  dev-tools-playbook.yml  mkdocs.yaml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci-cd-nexus-release.yml
docs/: index.md  installation.md  troubleshooting.md
k8s/helm/: pulse8-core-cli-dev.yaml
pulse8_core_cli/: README-dev.md  main.py
pulse8_core_cli/auth/: functions.py  module.py  windows_functions.py
pulse8_core_cli/backend/: functions.py  module.py
pulse8_core_cli/backend_fastapi/: functions.py  module.py
pulse8_core_cli/backend_shared_lib/: functions.py  module.py
pulse8_core_cli/deploy/: README.md  functions.py  module.py
pulse8_core_cli/deploy/manifests/: main.py
pulse8_core_cli/deploy/manifests/base/: deployment.py  ingress.py  kustomization.py  service.py
pulse8_core_cli/deploy/templates/: helm-deployment.yaml
pulse8_core_cli/environment/: constants.py  functions.py  module.py
pulse8_core_cli/frontend/: functions.py  module.py
pulse8_core_cli/frontend_angular/: functions.py  module.py
pulse8_core_cli/frontend_shared_lib/: functions.py  module.py
pulse8_core_cli/modules/: auth.py  backend_fastapi.py  environment.py
pulse8_core_cli/shared/: constants.py  module.py  platform_discovery.py  privileges_discovery.py  template_management.py  windows_functions.py
pulse8_core_cli/util/: platform_discovery.py
pulse8_core_cli/utils/: module.py
pulsex_core_cli/: README-dev.md  main.py
pulsex_core_cli/auth/: functions.py  module.py
pulsex_core_cli/backend/: functions.py  module.py
pulsex_core_cli/backend_shared_lib/: functions.py  module.py
pulsex_core_cli/frontend_angular/: functions.py  module.py
pulsex_core_cli/frontend_shared_lib/: functions.py  module.py
pulsex_core_cli/shared/: constants.py  module.py  template_management.py  windows_functions.py
pulsex_core_cli/utils/: module.py
