[tool.poetry]
name = "pulse8-core-cli"
version = "0.1.0"
description = "Pulse8 Core Command Line Interface (CLI)"
authors = ["Pulse8 Core Team"]
readme = "README.md"


[tool.poetry.scripts]
pulse8 = "pulse8_core_cli.main:pulse8_cli"
p8 = "pulse8_core_cli.main:pulse8_cli"


[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.10.0"}
rich = "^13.9.4"
shellingham = "^1.5.4"
copier = "^9.6.0"
inquirer = "^3.4.0"
copier-templates-extensions = "^0.3.1"
pyyaml = "^6.0.2"
black = "^24.10.0"
pyuac = "^0.0.3"
python-dotenv = "^1.1.0"


[tool.poetry.dev-dependencies]
pytest = "^8.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
