[tool.poetry]
name = "pulseX-core-cli"
version = "0.1.0"
description = "PulseX Core Command Line Interface (CLI)"
authors = ["PulseX Core Team"]
readme = "README.md"


[tool.poetry.scripts]
pulseX = "pulsex_core_cli.main:pulseX_cli"
px = "pulsex_core_cli.main:pulseX_cli"


[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.10.0"}
rich = "^13.9.4"
shellingham = "^1.5.4"
copier = "^9.6.0"
inquirer = "^3.4.0"
copier-templates-extensions = "^0.3.1"
pyyaml = "^6.0.2"
black = "^24.10.0"
pyuac = "^0.0.3"
python-dotenv = "^1.1.0"


[tool.poetry.dev-dependencies]
pytest = "^8.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
