[project]
name = "pulseX-core-cli"
description = "PulseX Core Command Line Interface (CLI)"
authors = [
    { name = "PulseX Core Team" }
]
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer[all]==0.10.0",
    "rich==13.9.4",
    "shellingham==1.5.4",
    "copier==9.6.0",
    "inquirer==3.4.0",
    "copier-templates-extensions==0.3.1",
    "pyyaml==6.0.2",
    "black==24.10.0",
    "pyuac==0.0.3",
    "python-dotenv==1.1.0"
]


[project.scripts]
pulseX = "pulsex_core_cli.main:pulseX_cli"
px = "pulsex_core_cli.main:pulseX_cli"



[tool.poetry.group.dev.dependencies]
pytest = "8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
